--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -21,6 +21,13 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689157.md#1" target="_blank">陈思敏：中共忧惧2020年经济失速金融风险失控</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689157.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/520e4613d0b1380c7cb763cfce0bc20b-150x120.jpg" align ="left"></a>11月28日中共金融稳定发展委员会（金融委）会议指出，防范化解重大金融风险，进一步深化资本市场和中小银行改革，多管道增强商业银行特别是中小银行资本实力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688219.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（下）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-908835-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？我对这两个问题的回答都是“能！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689585.md#1" target="_blank">大纪元准确传达香港民意 呈现时代真相</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190927124107100615-150x120.jpg" align ="left"></a>在烽火前沿，大纪元和香港抗议民众站在一起，与红媒形成鲜明对照。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692558.md#1" target="_blank">莲园：一七令?辨</a><br></h3>悲。
+末劫，人危。
+邪灵至，德行衰。
+中华大地，马列风吹。
+出生红洗脑，毒誓血旗挥。
+“理论”渗红魁首，谎言蛊世民欺。 
+共产血腥谁为伍？智士远邪近芳菲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 2:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11692307.md#1" target="_blank">王赫：中共正在制造农民的燎原大火</a><br></h3>现状究竟如何？透过中共的真实信息封锁与假新闻泛滥的“双手”，我们可从如下5桩事件来一窥端倪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 1:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11692071.md#1" target="_blank">吐为快：西江月·中国内政</a><br></h3>公开强拆民宅，
 暗里盗窃国财。
@@ -57,6 +64,5 @@
 颣无再颣不知耻，还在觍脸妄自尊。
 恶党为何怕反对？它理歪邪没有真。
 无神进化唯物论，诋毁真相瘟人心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11688900.md#1" target="_blank">李小刚：脑指纹与中共的脑控武器</a><br></h3>脑控武器的概念现在已经不稀奇了，而脑控武器用到了脑指纹，有些人对脑控武器中的脑指纹还不是非常了解，其实，要了解脑指纹，首先就必需提到脑波。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
